TODOs and general changes